--- a/package.json
+++ b/package.json
@@ -9,8 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3uikit/core": "^0.2.10",
+    "@web3uikit/icons": "^0.2.6",
+    "@web3uikit/web3": "^0.2.2",
+    "ethers": "^5.7.2",
+    "moralis-v1": "^1.12.0",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "babel-plugin-styled-components": "^2.0.7",
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
